Closed
Bug 42187
Opened 26 years ago
Closed 25 years ago
colspan overrides width on TD
Categories
(Core :: Layout: Tables, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla0.9
People
(Reporter: mgsp, Assigned: bernd_mozilla)
References
()
Details
(Keywords: testcase)
Attachments
(3 files)
|
1.09 KB,
text/html
|
Details | |
|
553 bytes,
patch
|
Details | Diff | Splinter Review | |
|
1.59 KB,
patch
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/4.72 [en] (X11; I; Linux 2.2.14-5.0 i586; Nav)
BuildID: 2000041805
In the page at http://www.longestjourney.com, image with girl's right hand
placed not where it should have been. It look separated from the rest of the
body.
Reproducible: Always
Steps to Reproduce:
1.go to http://www.longestjourney.com
2.not much else
3.at all
Actual Results: incorrectly rendered page
Expected Results: correctly rendered page
table rendering error?
Comment 1•26 years ago
|
||
image looks absolutely fine to me in 61220 (i use the term 'fine' loosely); you
were using an old build, please try again with a newer one.
Status: UNCONFIRMED → RESOLVED
Closed: 26 years ago
Component: HTML Element → Layout
Resolution: --- → WORKSFORME
Comment 2•25 years ago
|
||
This page looks ok, as long as your Browser width is set low enough that the
girl's hand is forced into being right next to her body. However if you increase
your browser width then the hand detaches and a gap is created. That gap does
not occur in Netscape 4.X at any width.
tested using linux 2000-09-26-09-MN6 mozilla build.
Status: RESOLVED → UNCONFIRMED
Resolution: WORKSFORME → ---
Comment 3•25 years ago
|
||
confirming bug with 092608 mozilla trunk build on NT. images in a table
notlining up right. Over to HTML Tables.
Assignee: clayton → karnaze
Status: UNCONFIRMED → NEW
Component: Layout → HTMLTables
Ever confirmed: true
QA Contact: petersen → chrisd
Updated•25 years ago
|
Keywords: makingtest
Comment 4•25 years ago
|
||
If you reduce the length of the comments in the Production Updates column, the
contents of the page line up much better, although still not perfectly. Might
this be related to bug 19961?
Keywords: makingtest
Comment 6•25 years ago
|
||
Comment 7•25 years ago
|
||
For a cell such as <td colspan="2" width="195"> the explicit width is ignored
making the cells resize when the window is resized.
Keywords: testcase
Summary: incorrect page rendering regardless → colspan overrides width on TD
This is really a pure table bug:
inside
PRBool
BasicTableLayoutStrategy::ComputeNonPctColspanWidths(PRInt32 aWidthIndex,
nsTableCellFrame* aCellFrame,
nscoord aCellWidth,
PRInt32 aColIndex,
PRInt32 aColSpan,
PRInt32& aLimitType,
float
aPixelToTwips)
the cell inside a fixed colspan requires more width and the desired content
width of the colspan is taken, instead of fullfilling the requirements of the
fixed cell with the minimum possible width.
| Assignee | ||
Comment 10•25 years ago
|
||
| Assignee | ||
Comment 11•25 years ago
|
||
The attached patch fixes the testcase and the original URL. It passed the table
regression tests in core and viewertest directories. If in a near future this
'spot the loney' or 'hork the viewer' game ends, I may be able to test it even
in the remaining directories.
Keywords: patch
| Assignee | ||
Comment 12•25 years ago
|
||
the patch does not pass the regression tests in the table/bugs directory,
because it makes the regression in bug 2684 even worse. :-((
Comment 13•25 years ago
|
||
Reassigning to bernd.
Assignee: karnaze → bernd.mielke
Target Milestone: --- → mozilla0.9.1
| Assignee | ||
Comment 14•25 years ago
|
||
Comment 15•25 years ago
|
||
r=karnaze, moving to m0.9.
Bernd, I have just a few minor whitespace style nits (in keeping with the
style of the existing code). Could you please do
else {
if ((newColAdjWidth > 0) && (FIX == aWidthIndex)) {
instead of
else
{
if((newColAdjWidth > 0) && (FIX == aWidthIndex))
{
Target Milestone: mozilla0.9.1 → mozilla0.9
Comment 16•25 years ago
|
||
sr=attinasi@netscape.com (assuming karnaze's comments make it in).
| Assignee | ||
Comment 17•25 years ago
|
||
fix checked in
Status: NEW → RESOLVED
Closed: 26 years ago → 25 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•