limit the spread of desired content width in colspans with specified fixed width's bug 42187, it fixes also the regression in bug 2684. r=karnaze sr=attinasi